k8s/helm/oauth2-proxy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oauth2-proxy
  namespace: api-gateway
spec:
  podSelector:
    matchLabels:
      app: oauth2-proxy
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: api-gateway
        podSelector:
          matchLabels:
            app: kong
    - ports:
      - protocol: TCP
        port: 4180
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: graph-gateway
      podSelector:
        matchLabels:
          app: graph-gateway
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
      - protocol: TCP
        port: 443
